src/styles/page.scss
/* ... */
// .floating-hover-target {
//   height: 2rem;
//   width: 60%;
//   position: absolute;
//   bottom: 0;
//   left: 50%;
//   transform: translate(-50%);
//   z-index: 5;

//   &.on-top {
//     bottom: unset;
//     top: 0;
//   }

//   @container lucid-page (max-width: #{v.$mobile-breakpoint}) {
//     width: 100%;
//   }
// }

.floating-area {
  position: absolute;
  bottom: max(2.5cqh, 1rem);
  left: 50%;
  z-index: 10;

  transform: translate3d(-50%, 110%, 0);
  opacity: 0;
  pointer-events: none;

  display: flex;
  align-items: center;
  justify-content: center;

  width: auto;
  max-width: 70vw;
  padding: v.$space-md;

  background: v.$glass-bg;
  border: 1px solid v.$glass-bd;
  border-radius: 100px;
  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
  backdrop-filter: blur(12px) brightness(0.9);

  transition: $floating-transition;

  .separator {
    width: 1px;
    min-width: 1px;
    height: v.$space-2xl;
    background: v.$glass-bd;
    margin: 0 v.$space-sm;
  }

  &:not(.floating-area--hidden):hover,
  .lucid-contents:hover &:not(.floating-area--hidden) {
    opacity: 1;
    transform: translate3d(-50%, 0, 0);
    pointer-events: all;
  }

  &.on-top {
    bottom: unset;
    top: max(2.5cqh, 1rem);
    transform: translate3d(-50%, -110%, 0);

    &:not(.floating-area--hidden):hover,
    .lucid-contents:hover &:not(.floating-area--hidden) {
      transform: translate3d(-50%, 0, 0);
    }
  }

  &.on-right,
  &.on-left {
    bottom: unset;
    top: 50%;
    flex-direction: column;
    width: 100%;
    max-width: fit-content;
    padding: v.$space-md;

    .controls {
      flex-direction: column;

      &--right,
      &--left {
        flex-direction: column;
      }
    }

    .separator {
      width: 100%;
      min-width: 100%;
      height: 1px;
      margin: v.$space-sm 0;
    }
  }

  &.on-right {
    left: unset;
    right: 0;
    transform: translate3d(100%, -50%, 0);

    &:not(.floating-area--hidden):hover,
    .lucid-contents:hover &:not(.floating-area--hidden) {
      transform: translate3d(-#{v.$space-lg}, -50%, 0);
    }
  }

  &.on-left {
    left: 0;
    right: unset;
    transform: translate3d(-100%, -50%, 0);

    &:not(.floating-area--hidden):hover,
    .lucid-contents:hover &:not(.floating-area--hidden) {
      transform: translate3d(#{v.$space-lg}, -50%, 0);
    }
  }

  @container lucid-page (max-width: #{v.$mobile-breakpoint}) {
    bottom: v.$space-md;
    max-width: calc(100% - v.$space-3xl);
    padding: v.$space-sm v.$space-lg;

    pointer-events: all;

    &.on-top {
      bottom: unset;
      top: v.$space-md;
    }

    &.floating-area--hidden {
      opacity: 0;
      pointer-events: none;
    }
  }
}

.line-lyrics,
.syllable-lyrics {
  --lead-font-weight: 700;
  --lead-font-size: clamp(1.8rem, 4cqw, 3.4rem);
  --lyrics-line-default-padding: 10cqw;
  --lyrics-text-color: 255, 255, 255;
  overflow: visible;

  --bg-font-weight: 600;
  --bg-font-size: calc(var(--lead-font-size) * 0.75);

  --interlude-height: max(calc(var(--lead-font-size) * 1.2), 32px);
  --interlude-dots-gap: max(calc(var(--interlude-height) * 0.3), 16px);
  --interlude-size: max(calc(var(--interlude-height) * 0.3), 10px);

  word-break: keep-all;
  overflow-wrap: break-word;

  font-size: var(--lead-font-size);
  font-weight: var(--lead-font-weight);

  .romanized-text {
    --romanized-font-size: calc(clamp(1.8rem, 4cqw, 3.6rem) * 0.6);
    display: block;
    font-size: var(--romanized-font-size);
    font-weight: var(--romanized-font-weight, 700);
    direction: ltr;
    unicode-bidi: embed;
  }

  .line-wrapper {
    --l-blur: 0px;
    --l-scale: 1;
    --l-opacity: 0.6;
    overflow: visible;

    filter: blur(var(--l-blur));
    transform: scale(var(--l-scale));
    opacity: var(--l-opacity);
    transform-origin: center left;

    margin-bottom: var(--line-gap, calc(clamp(1.8rem, 4cqw, 3.6rem) * 0.5));

    transition-duration: 0.3s;
    transition-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
    transition-property: filter, transform, opacity;
    will-change: filter, transform, opacity;

    &:hover {
      filter: blur(0px);
      opacity: 0.8;
    }
    &.interlude-wrapper {
      margin-bottom: v.$space-xs;
    }

    &.rtl {
      direction: rtl;
      transform-origin: center right;

      .romanized-text {
        text-align: right;
      }
    }
  }

  .trailing-whitespace:after {
    content: "";
    margin-right: 0.3ch;
  }
}
/* ... */

